# AbertayMFA

./: README.md
mfa-agent/: Cargo.toml  bpf-sysmon.c  sysmon-loader.c  xdp-entropy.c
mfa-agent/src/: lib.rs  main.rs
mfa-agent/src/audit/: mod.rs
mfa-agent/src/config/: mod.rs
mfa-agent/src/crypto/: mod.rs
mfa-agent/src/dual_authority/: mod.rs
mfa-agent/src/ebpf/: mod.rs
mfa-agent/src/netfilter/: mod.rs
mfa-agent/src/network/: mod.rs
mfa-agent/src/orchestrator/: mod.rs
mfa-agent/src/protocol/: mod.rs
mfa-agent/src/sysmon/: mod.rs
mfa-agent/src/tpm/: mod.rs
mfa-agent/src/xdp/: mod.rs
mfa-monitor/: Cargo.toml
mfa-monitor/src/: lib.rs  session_tracker.rs
