[package]
name = "mfa-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# TPM
tss-esapi = "7.4"

# Crypto: Post-Quantum + Classical
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
x25519-dalek = "2.0"
aes-gcm = "0.10"

# Existing crypto
openssl = { version = "0.10", features = ["vendored"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
argon2 = "0.5"

# Networking
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

anyhow = "1.0"
libc = "0.2"


[[bin]]
name = "mfa-agent"
path = "src/main.rs"

[[bin]]
name = "baseline-tool"
path = "src/bin/baseline-tool.rs"

[lib]
name = "mfa_agent"
path = "src/lib.rs"


[profile.release]
opt-level = "z"
lto = true
strip = true

