[package]
name = "mfa-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Path dependency, reuses mfa-agent's crypto, audit, tpm modules without duplicating code. Compiles separately.
mfa-agent = { path = "/opt/mfa-agent" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true

[[bin]]
name = "mfa-monitor"
path = "src/bin/monitor.rs"

[[bin]]
name = "mfa-logfwd"
path = "src/bin/logfwd.rs"
